feat: updated login swagger doc
