# app/Http/Controllers/AuthController.php
@@ -41,10 +41,10 @@ class AuthController extends Controller
     public function register(Request $request): JsonResponse
     {
         $data = $request->validate([
-                                       'name' => 'required|string',
-                                       'email' => 'required|email',
-                                       'password' => 'required',
-                                   ]);
+           'name' => 'required|string',
+           'email' => 'required|email',
+           'password' => 'required',
+        ]);
 
         /* @var \App\Models\User $user */
         $user = User::where('email', $request->email)->first();
@@ -54,19 +54,42 @@ class AuthController extends Controller
         }
 
         $user = User::create([
-                                 'name' => $data['name'],
-                                 'email' => $data['email'],
-                                 'password' => Hash::make($data['password']),
-                             ]);
+             'name' => $data['name'],
+             'email' => $data['email'],
+             'password' => Hash::make($data['password']),
+        ]);
 
         $token = $user->createToken('auth_token')->plainTextToken;
         return response()->json([
-                                    'access_token' => $token,
-                                    'token_type' => 'Bearer',
-                                ]);
+            'access_token' => $token,
+            'token_type' => 'Bearer',
+        ]);
     }
 
     /**
+     * @OA\Post(
+     *      path="/api/v1/login",
+     *      operationId="login",
+     *      tags={"Login"},
+     *      summary="Login user",
+     *      description="Logins user in the system",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/StoreLoginRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/LoginResponse")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *     )
+     *
+     */
+     /**
      * Login
      *
      * @return \Illuminate\Http\JsonResponse
@@ -74,9 +97,9 @@ class AuthController extends Controller
     public function login(Request $request): JsonResponse
     {
         $request->validate([
-                               'email' => 'required|email',
-                               'password' => 'required',
-                           ]);
+           'email' => 'required|email',
+           'password' => 'required',
+        ]);
 
         /* @var \App\Models\User $user */
         $user = User::where('email', $request->email)->first();
@@ -88,8 +111,8 @@ class AuthController extends Controller
         $token = $user->createToken('auth_token')->plainTextToken;
 
         return response()->json([
-                                    'access_token' => $token,
-                                    'token_type' => 'Bearer',
-                                ]);
+            'access_token' => $token,
+            'token_type' => 'Bearer',
+        ]);
     }
 }
